modified:   client/client/app/app.component.html 	modified:   client/client/app/app.module.ts 	modified:   client/client/app/app.routing.ts 	modified:   client/client/app/login/login.component.html 	new file:   client/client/app/menu/index.ts 	new file:   client/client/app/menu/menu.component.html 	new file:   client/client/app/menu/menu.component.ts 	modified:   client/client/app/register/register.component.html 	modified:   client/client/index.html 	modified:   client/client/package-lock.json 	modified:   client/client/package.json

--- a/client/client/package.json
+++ b/client/client/package.json
@@ -22,7 +22,12 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
+        "@angular2-material/button": "^2.0.0-alpha.8-3",
+        "@angular2-material/card": "^2.0.0-alpha.8-3",
+        "@angular2-material/core": "^2.0.0-alpha.8-3",
+        "@angular2-material/icon": "^2.0.0-alpha.8-3",
         "core-js": "^2.4.1",
+        "materialize-css": "^0.99.0",
         "rxjs": "^5.2.0",
         "systemjs": "^0.19.47",
         "zone.js": "^0.8.5"
