--- a/client/client/package.json
+++ b/client/client/package.json
@@ -26,6 +26,8 @@
         "@angular2-material/card": "^2.0.0-alpha.8-3",
         "@angular2-material/core": "^2.0.0-alpha.8-3",
         "@angular2-material/icon": "^2.0.0-alpha.8-3",
+        "@ngx-translate/core": "^7.1.0",
+        "@ngx-translate/http-loader": "^0.1.0",
         "core-js": "^2.4.1",
         "materialize-css": "^0.99.0",
         "rxjs": "^5.2.0",
